--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,12 @@ openpyxl
 prophet
 yfinance
 statsmodels
-sklearn
+streamlit==1.36.0
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.22.0
+prophet==1.1.5
+pmdarima==2.0.4
+scikit-learn==1.5.1
+statsmodels==0.14.2
+
