--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,18 @@
-streamlit
+streamlit==1.29.0
 pandas==2.2.2
 numpy==1.26.4
 plotly==5.22.0
-geopandas
-shapely
-fiona
-pyproj
-rtree
-geopy
-streamlit-plotly-events
-streamlit
-openpyxl
+geopandas==0.14.3
+shapely==2.0.3
+fiona==1.9.6
+pyproj==3.6.1
+rtree==1.2.0
+geopy==2.4.1
+streamlit-plotly-events==0.3.0
+openpyxl==3.1.2
 prophet==1.1.4
+cmdstanpy==1.2.2  # Required for prophet
 statsmodels==0.14.2
 pmdarima==2.0.4
-scikit-learn
-yfinance
-
-
-
+scikit-learn==1.4.2
+yfinance==0.2.40
